remove date for now

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="column">
     <main class="column">
         <section class="column note-group">
-            <div class="row date">
+            <!-- <div class="row date">
                 <p>August 06, 2025<p>
-            </div>
+            </div> -->
             <form class="column note">
                 <textarea class="title" placeholder="Title"></textarea>
                 <textarea class="body" placeholder="Insert text here..."></textarea>
